--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Rescue — Save • Foster • Adopt</title>
+  <title>Loki's Legacy Rescue — Save • Foster • Adopt</title>
   <meta name="description" content="Animal rescue helping dogs and cats through rescue, fostering, and adoption." />
   <style>
     :root{
