--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Loki's Legacy Rescue — Save • Foster • Adopt</title>
-  <meta name="description" content="Animal rescue helping dogs and cats through rescue, fostering, and adoption." />
+  <meta name="description" content="Helping all animals through rescue, fostering, and adoption." />
   <style>
     :root{
       --bg:#0b0f14; --card:#111826; --muted:#9fb0c3; --text:#e9f1ff;
@@ -90,7 +90,7 @@
     <div class="wrap nav">
       <div class="brand">
         <span class="logo" aria-hidden="true"></span>
-        <span id="rescueName">Your Animal Rescue</span>
+        <span id="rescueName">Loki's Legacy Rescue</span>
       </div>
       <nav class="links" aria-label="Site">
         <a href="#about">About</a>
@@ -105,7 +105,7 @@
   <main class="wrap">
     <section class="hero">
       <div class="card">
-        <span class="badge">Stockton-area friendly • Edit the text below</span>
+        <span class="badge">Stockton-area friendly • Central Valley, Bay Area and Beyond.</span>
         <h1>Rescue. Rehab. Rehome.</h1>
         <p>
           We help dogs and cats in crisis through rescue, fostering, medical support, and adoption.
