--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <span class="badge">Stockton-area friendly • Central Valley, Bay Area and Beyond.</span>
         <h1>Rescue. Rehab. Rehome.</h1>
         <p>
-          We help dogs and cats in crisis through rescue, fostering, medical support, and adoption.
+          We help animals in crisis through rescue, fostering, medical support, and adoption.
           Want to help today? Foster, donate, or share our posts.
         </p>
         <div class="ctaRow">
@@ -118,7 +118,7 @@
         </div>
 
         <div class="stats">
-          <div class="stat"><b>💛 501(c)(3)</b><span class="mini">Add your EIN on the Donate section</span></div>
+          <div class="stat"><b>💛 501(c)(3)</b><span class="mini">EIN# 41-3832094 on the Donate section</span></div>
           <div class="stat"><b>🏠 Foster-based</b><span class="mini">We rely on local fosters</span></div>
           <div class="stat"><b>🛟 Emergency help</b><span class="mini">Strays, surrenders, urgent cases</span></div>
         </div>
