--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
 
         <div class="stats">
-          <div class="stat"><b>💛 501(c)(3)</b><span class="mini">EIN# 41-3832094 on the Donate section</span></div>
+          <div class="stat"><b>💛 501(c)(3)</b><span class="mini">EIN# 41-3832094</span></div>
           <div class="stat"><b>🏠 Foster-based</b><span class="mini">We rely on local fosters</span></div>
           <div class="stat"><b>🛟 Emergency help</b><span class="mini">Strays, surrenders, urgent cases</span></div>
         </div>
