--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <main class="wrap">
     <section class="hero">
       <div class="card">
-        <span class="badge">Stockton-area friendly • Central Valley, Bay Area and Beyond.</span>
+        <span class="badge"> Central Valley, Bay Area and Beyond.</span>
         <h1>Rescue. Rehab. Rehome.</h1>
         <p>
           We help animals in crisis through rescue, fostering, medical support, and adoption.
@@ -119,17 +119,17 @@
 
         <div class="stats">
           <div class="stat"><b>💛 501(c)(3)</b><span class="mini">EIN# 41-3832094</span></div>
-          <div class="stat"><b>🏠 Foster-based</b><span class="mini">We rely on local fosters</span></div>
+          <div class="stat"><b>🏠 Foster-based</b><span class="mini">We rely on fosters</span></div>
           <div class="stat"><b>🛟 Emergency help</b><span class="mini">Strays, surrenders, urgent cases</span></div>
         </div>
       </div>
 
       <div class="card">
         <h2>Urgent needs</h2>
-        <p>Copy/paste your current needs here. Examples:</p>
+        <p>Blankets, Sweaters, jackets, straw, dog houses/shelters/kennels, beds, towels, toys</p>
         <ul>
-          <li>Dog food (adult + puppy), cat food, litter</li>
-          <li>Crates, leashes, slip leads, bowls</li>
+          <li>Dog food (adult + puppy), cat food & kitten formula, litter</li>
+          <li>Crates, leashes, slip leads, harnesses, collars, bowls</li>
           <li>Flea/tick prevention, dewormer</li>
           <li>Gas cards for transport & vet runs</li>
         </ul>
