--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <div class="card">
         <h2>Urgent needs</h2>
-        <p>Blankets, Sweaters, jackets, straw, dog houses/shelters/kennels, beds, towels, toys</p>
+        <p>Blankets, sweaters, jackets, straw, dog houses/shelters/kennels, beds, towels, toys</p>
         <ul>
           <li>Dog food (adult + puppy), cat food & kitten formula, litter</li>
           <li>Crates, leashes, slip leads, harnesses, collars, bowls</li>
