--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
           Every dollar helps. Replace the placeholders with your real links.
         </p>
         <ul>
-          <li><b>Venmo:</b> @YourRescue</li>
+          <li><b>Venmo:</b> @LokisLegacyRescue</li>
           <li><b>PayPal:</b> paypal.me/YourRescue</li>
           <li><b>Zelle:</b> your-email@domain.com</li>
           <li><b>Wish List:</b> Amazon Wish List link</li>
-          <li><b>501(c)(3) EIN:</b> XX-XXXXXXX</li>
+          <li><b>501(c)(3) EIN:</b> 41-3832094</li>
         </ul>
       </div>
     </section>
