--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
         <p>
           We help animals in crisis through rescue, fostering, medical support, and adoption.
           Want to help today? Foster, donate, or share our posts.
+
+         ***Please bear with us. This website is still under construction!!!***
         </p>
         <div class="ctaRow">
           <a class="btn primary" href="#donate">Donate</a>
