--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           We help animals in crisis through rescue, fostering, medical support, and adoption.
           Want to help today? Foster, donate, or share our posts.
 
-         ***Please bear with us. This website is still under construction!!!***
+    
         </p>
         <div class="ctaRow">
           <a class="btn primary" href="#donate">Donate</a>
@@ -148,6 +148,15 @@
             We’re a community-driven rescue focused on saving animals in Stockton and surrounding areas.
             Our mission is to reduce suffering by providing rescue intake, temporary foster homes,
             medical care, and adoption placement.
+
+            Loki’s Legacy Rescue was born from two souls whose energy forever changed mine.  
+
+Years ago, I survived an accident that took the life of a woman I never knew — an animal lover whose compassion I carry with me still. I believe a piece of her love for animals found its way into my heart that day.  
+
+Many years later, I met Loki — a gentle, loyal soul who reminded me what pure love looks like. Though I couldn’t save him in time, his spirit became my purpose. His legacy now lives on through every life this rescue touches.  
+
+Loki’s Legacy Rescue exists to honor them both — a woman’s unseen kindness and a dog’s unwavering love — and to turn loss into a living force of hope, healing, and compassion for every animal in need.  
+
           </p>
         </div>
         <div class="card">
