--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><img src="yourphoto.jpg" style="max-width:100%; border-radius:16px; margin-top:15px;">
+  <title><img src="1010.jpg" style="max-width:100%; border-radius:16px; margin-top:15px;">
 Loki's Legacy Rescue — Save • Foster • Adopt</title>
   <meta name="description" content="Helping all animals through rescue, fostering, and adoption." />
   <style>
