--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Loki's Legacy Rescue — Save • Foster • Adopt</title>
           <li>Gas cards for transport & vet runs</li>
         </ul>
         <div class="hr"></div>
-        <p class="note">Tip: add a free Amazon Wish List link + Venmo/PayPal/Zelle in the Donate section.</p>
+        <p class="note">*Amazon Wish List link located in the Donate section.*</p>
       </div>
     </section>
 
@@ -145,9 +145,7 @@ Loki's Legacy Rescue — Save • Foster • Adopt</title>
         <div class="card">
           <h2>About us</h2>
           <p>
-            We’re a community-driven rescue focused on saving animals in Stockton and surrounding areas.
-            Our mission is to reduce suffering by providing rescue intake, temporary foster homes,
-            medical care, and adoption placement.
+           Loki’s Legacy Rescue is a nonprofit organization dedicated to rescuing, rehabilitating, and rehoming stray, abandoned, and abused animals, while providing food, medical care, and advocacy to reduce animal suffering in our community.
 
             Loki’s Legacy Rescue was born from two souls whose energy forever changed mine.  
 
