--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ Loki’s Legacy Rescue exists to honor them both — a woman’s unseen kindness
         <div class="card">
           <h2>What we do</h2>
           <ul>
-            <li>Loki’s Legacy Rescue is a nonprofit organization dedicated to rescuing, rehabilitating, and rehoming stray, abandoned, and abused animals, while providing food, medical care, and advocacy to reduce animal suffering in our community.
-              <li></li>Rescue strays + owner surrenders when space allows</li>
+            <li>Loki’s Legacy Rescue is a nonprofit organization dedicated to rescuing, rehabilitating, and rehoming stray, abandoned, and abused animals, while providing food, medical care, and advocacy to reduce animal suffering in our community.<li>
+              </li>Rescue strays + owner surrenders when space allows</li>
             <li>Provide basic medical care & spay/neuter when possible</li>
             <li>Match adopters with the right pets</li>
             <li>Support fosters with supplies and guidance</li>
