--- a/index.html
+++ b/index.html
@@ -269,5 +269,35 @@ Loki’s Legacy Rescue exists to honor them both — a woman’s unseen kindness
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
+  <style>
+.paw {
+  position: fixed;
+  width: 26px;
+  opacity: 0.8;
+  pointer-events: none;
+  animation: fadeOut 2s forwards;
+}
+
+@keyframes fadeOut {
+  from {opacity: 0.8;}
+  to {opacity: 0;}
+}
+</style>
+
+<script>
+document.addEventListener("mousemove", function(e){
+  const paw = document.createElement("img");
+  paw.src = "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Paw-print.svg/64px-Paw-print.svg.png";
+  paw.className = "paw";
+  paw.style.left = e.pageX + "px";
+  paw.style.top = e.pageY + "px";
+  document.body.appendChild(paw);
+
+  setTimeout(() => {
+    paw.remove();
+  }, 2000);
+});
+</script>
+
 </body>
 </html>
