--- a/index.html
+++ b/index.html
@@ -284,20 +284,49 @@ Loki’s Legacy Rescue exists to honor them both — a woman’s unseen kindness
 }
 </style>
 
+<style>
+.pawprint {
+  position: fixed;
+  width: 32px;
+  opacity: 0.75;
+  pointer-events: none;
+  transform: rotate(var(--rot));
+  animation: fadePaw 3.5s forwards;
+}
+
+@keyframes fadePaw {
+  from { opacity: 0.75; }
+  to { opacity: 0; }
+}
+</style>
+
 <script>
+let lastPawTime = 0;
+
 document.addEventListener("mousemove", function(e){
+  const now = Date.now();
+  
+  // slow it down (one paw every 180ms)
+  if(now - lastPawTime < 180) return;
+  lastPawTime = now;
+
   const paw = document.createElement("img");
-  paw.src = "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Paw-print.svg/64px-Paw-print.svg.png";
-  paw.className = "paw";
-  paw.style.left = e.pageX + "px";
-  paw.style.top = e.pageY + "px";
+  paw.src = "https://i.imgur.com/4NZ6uLY.png"; // real paw print graphic
+  paw.className = "pawprint";
+
+  paw.style.left = (e.pageX - 16) + "px";
+  paw.style.top = (e.pageY - 16) + "px";
+
+  // random slight rotation
+  const rot = Math.random() * 40 - 20;
+  paw.style.setProperty("--rot", rot + "deg");
+
   document.body.appendChild(paw);
 
-  setTimeout(() => {
-    paw.remove();
-  }, 2000);
+  setTimeout(() => paw.remove(), 3500);
 });
 </script>
+
 
 </body>
 </html>
