--- a/index.html
+++ b/index.html
@@ -364,18 +364,36 @@ document.addEventListener("mousemove", function(e){
 }
 </style>
 
+<style>
+.pawprint {
+  position: fixed;
+  width: 30px;
+  opacity: 0.75;
+  pointer-events: none;
+  z-index: 999999;
+  transform: rotate(var(--rot));
+  animation: fadePaw 4s forwards;
+  filter: drop-shadow(0 0 6px rgba(255,255,255,0.35));
+}
+
+@keyframes fadePaw {
+  from { opacity: 0.75; }
+  to { opacity: 0; }
+}
+</style>
+
 <script>
 let lastPawTime = 0;
 
 document.addEventListener("mousemove", function(e){
   const now = Date.now();
 
-  // speed (higher = slower)
+  // speed control (higher = slower)
   if(now - lastPawTime < 280) return;
   lastPawTime = now;
 
   const paw = document.createElement("img");
-  paw.src = "paw.png"; // <-- MUST match your uploaded filename exactly
+  paw.src = "paw.jpg";   // <-- YOUR IMAGE FILE
   paw.className = "pawprint";
 
   paw.style.left = (e.clientX - 15) + "px";
@@ -385,9 +403,11 @@ document.addEventListener("mousemove", function(e){
   paw.style.setProperty("--rot", rot + "deg");
 
   document.body.appendChild(paw);
+
   setTimeout(() => paw.remove(), 4000);
 });
 </script>
+
 
 </body>
 </html>
