--- a/index.html
+++ b/index.html
@@ -582,7 +582,8 @@ Loki’s Legacy Rescue exists to honor them both — a woman’s unseen kindness
     lastPawTime = now;
 
     const paw = document.createElement("img");
-    paw.src = "paw.jpg?v=" + now;  // uses YOUR image
+   paw.src = "images/paw.jpg?v=" + now;
+  // uses YOUR image
     paw.className = "pawprint";
 
     paw.style.left = (e.clientX - 15) + "px";
