--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@ Loki’s Legacy Rescue exists to honor them both — a woman’s unseen kindness
     z-index: 999999;
     transform: rotate(var(--rot));
     animation: fadePaw 4s forwards;
+      filter: brightness(0) invert(1) drop-shadow(0 0 6px rgba(255,255,255,0.35));
+
     filter: drop-shadow(0 0 6px rgba(255,255,255,0.35));
   }
   @keyframes fadePaw {
